<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".Portada">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/git">

            </LinearLayout>
            <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="NOMBRES Y APELLIDOS"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"/>
            -->

            <EditText
                android:id="@+id/txtName"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:hint="@string/textoNombre"
                android:maxLength="40"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:inputType="textCapCharacters"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/textofecha"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtDia"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="56dp"
                        android:hint="@string/dia"
                        android:maxLength="2"
                        android:numeric="integer"
                        android:textAlignment="center"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/txtMes"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="50dp"
                        android:hint="@string/mes"
                        android:maxLength="2"
                        android:numeric="integer"
                        android:textAlignment="center"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/txtAño"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="50dp"
                        android:hint="@string/año"
                        android:maxLength="4"
                        android:minLines="4"
                        android:numeric="integer"
                        android:textAlignment="center"
                        android:textColor="#ffffff" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/continuar"

                />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>