<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcontecimientoDelDia"
    android:background="#F5F5F5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/acontecimientoDelDia"
                android:textSize="30dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/acontecimiento"/>


            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="23dp"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/FechaAInvestigar"
                android:textSize="15dp"
                android:textColor="#000000"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtDia"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="56dp"
                    android:hint="@string/dia"
                    android:maxLength="2"
                    android:textColor="#000000"
                    android:numeric="integer"
                    android:textAlignment="center"
                     />

                <EditText
                    android:id="@+id/txtMes"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:hint="@string/mes"
                    android:maxLength="2"
                    android:numeric="integer"
                    android:textColor="#000000"
                    android:textAlignment="center"
                     />

                <EditText
                    android:id="@+id/txtAño"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:hint="@string/año"
                    android:maxLength="4"
                    android:minLines="4"
                    android:numeric="integer"
                    android:textColor="#000000"
                    android:textAlignment="center"
                     />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/HoraAcontecimiento"
                android:textSize="15dp"
                android:textColor="#000000"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txthoraDeseada"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:numeric="integer"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#69A77E"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/Calcular" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#CDD3CF">

                <TextView
                    android:id="@+id/txtContenido"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>